Practica 7 y 8 terminado